<?xml version="1.0"?>
<package format="2">
  <name>for_klondikebarr_hw2</name>
  <version>0.0.0</version>
  <description>The for_klondikebarr_hw2 package</description>
  <maintainer email="a.klondike.barr@gmail.com">klondike</maintainer>
  <license>BSD</license>
  <author email="a.klondike.barr@gmail.com">Klondike Barr</author>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <export>

  </export>
</package>
